Fix search box style on mobile

--- a/hra/patternlab/site/sass/molecules/_site-header.scss
+++ b/hra/patternlab/site/sass/molecules/_site-header.scss
@@ -113,7 +113,7 @@
 
             &:focus + input[type='submit'] {
                 background: {
-                    image: url('../images/svg/search-.svg');
+                    image: url('../images/svg/search.svg');
                 }
             }
         }
